--- a/app/Rance Connect/Stock.xaml
+++ b/app/Rance Connect/Stock.xaml
@@ -13,30 +13,28 @@
         <BooleanToVisibilityConverter x:Key="BoolToVis2"/>
     </Page.Resources>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" MinHeight="115"/>
-            <RowDefinition Height="34*"/>
+        <Frame x:Name="AddProductFrame" Panel.ZIndex="2" Height="450" Width="600"/>
+
+        <Grid>
+            <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="301*"/>
         </Grid.RowDefinitions>
-        <Grid VerticalAlignment="Center" Height="110">
+        <Grid VerticalAlignment="Center">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
         </Grid>
-        <Grid Grid.Row="1" Panel.ZIndex="1">
+        <Grid Panel.ZIndex="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Grid Margin="10,0,0,10" VerticalAlignment="Center">
+            <Grid Margin="10,0,0,0" VerticalAlignment="Top">
                 <TextBlock Visibility="{Binding ElementName=SearchBar,Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" Panel.ZIndex="1" IsHitTestVisible="False" Foreground="#FFFFFF" HorizontalAlignment="Center" Text="Rechercher un produit ..." Width="170" VerticalAlignment="Center"/>
-                <TextBox x:Name="SearchBar" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate"/>
+                <TextBox x:Name="SearchBar" Style="{StaticResource textBoxSearch}" Height="25" TextChanged="FilterUpdate"/>
             </Grid>
             <Grid  Margin="10,10,0,0" Grid.Column="1" VerticalAlignment="Top">
                 <StackPanel x:Name="Categories" Height="25" Background="#FF43484E" MinHeight="25" MaxHeight="25" VerticalAlignment="Top" Margin="0,0,0,-25">
@@ -45,15 +43,15 @@
                     </StackPanel>
                 </StackPanel>
             </Grid>
-            <Grid Margin="10,0,80,10" Grid.Column="2" VerticalAlignment="Center" Width="75">
+            <Grid Margin="10,0,80,0" VerticalAlignment="Top" Grid.Column="2" Width="75">
                 <TextBlock Visibility="{Binding ElementName=MinPrice,Path=Text.IsEmpty,Converter={StaticResource BoolToVis1}}" Panel.ZIndex="1" IsHitTestVisible="False" Foreground="#FFFFFF" HorizontalAlignment="Center" Text="Prix Min" Width="60" VerticalAlignment="Center"/>
-                <TextBox x:Name="MinPrice" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate"/>
+                <TextBox x:Name="MinPrice" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate" Height="25"/>
             </Grid>
-            <Grid  Margin="115,0,0,10" Grid.Column="2" VerticalAlignment="Center" Width="75">
+            <Grid  Margin="115,0,0,0" Grid.Column="2" VerticalAlignment="Top" Width="75">
                 <TextBlock Visibility="{Binding ElementName=MaxPrice,Path=Text.IsEmpty,Converter={StaticResource BoolToVis2}}" Panel.ZIndex="1" IsHitTestVisible="False" Foreground="#FFFFFF" HorizontalAlignment="Center" Text="Prix Max" Width="60" VerticalAlignment="Center"/>
-                <TextBox x:Name="MaxPrice" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate"/>
+                <TextBox x:Name="MaxPrice" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate" Height="25"/>
             </Grid>
-            <Grid  Margin="10,10,0,0" Grid.Column="3" VerticalAlignment="Top">
+            <Grid  Margin="10,10,10,0" Grid.Column="3" VerticalAlignment="Top">
                 <StackPanel x:Name="AddProduct" Height="25" Background="#FF2774D0" MinHeight="25" MaxHeight="25" VerticalAlignment="Top" Margin="0,0,0,-25">
                     <StackPanel Height="25">
                         <Button Content="Ajouter un Produit" Tag="" Click="AddProduct_Click" Height="25" Background="{x:Null}" Foreground="White"/>
@@ -62,7 +60,7 @@
             </Grid>
         </Grid>
         
-        <DataGrid Grid.Row="2" Margin="10,0,10,30" x:Name="Stocks" Background="#FF43484E" AutoGenerateColumns="False">
+        <DataGrid Grid.Row="1" Margin="10,0,10,30" x:Name="Stocks" Background="#FF43484E" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTemplateColumn Header="EAN" IsReadOnly="True" CanUserResize="False" Width="110">
                     <DataGridTemplateColumn.CellTemplate>
@@ -73,11 +71,20 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Name" IsReadOnly="True" CanUserResize="False" Width="250">
+                <DataGridTemplateColumn Header="Name" IsReadOnly="True" CanUserResize="False" Width="200">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="{Binding Name}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Prix" IsReadOnly="True" CanUserResize="False" Width="70">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Price}"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -101,25 +108,17 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Prix" IsReadOnly="True" CanUserResize="False" Width="70">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Price}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
                 <DataGridTemplateColumn IsReadOnly="True" Width="80">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" Margin="10, 10, 10, 10">
-                                <Button x:Name="goto" Tag="{Binding EAN}" Content="S'y rendre" Click="GoTo_Click"></Button>
+                                <Button x:Name="goto" Tag="{Binding EAN}" Content="Voir Plus" Click="GoTo_Click"></Button>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
-        </DataGrid>
+            </DataGrid>
+        </Grid>
     </Grid>
 </Page>
