--- a/app/Rance Connect/Product.xaml
+++ b/app/Rance Connect/Product.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:Rance_App"
       mc:Ignorable="d"
       d:DesignHeight="700" d:DesignWidth="800"
-      Title="Product">
+      Title="Product"
+      Unloaded="Page_Unloaded">
 
     <Grid>
         <Grid x:Name="CategoriesPopup" Visibility="Collapsed" Height="350" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center" Background="DarkGray" Panel.ZIndex="1">
